--- a/object_recognition_fastai_CIFAR10.ipynb
+++ b/object_recognition_fastai_CIFAR10.ipynb
@@ -24,7 +24,7 @@
     "import torch\n",
     "import tarfile\n",
     "import pickle\n",
-    "import numpy as np"
+    "import numpy as np\n"
    ]
   },
   {
